--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,7 @@ img {
 	text-align: center;
 	letter-spacing: 0.06em;
 	border-radius: 4px;
+	border: none;
 	padding: 10px 32px;
 	cursor: pointer;
 }
@@ -350,6 +351,7 @@ img {
 	text-align: center;
 	letter-spacing: 0.03em;
 	border-radius: 4px;
+	border: none;
 	padding: 6px 22px;
 	cursor: pointer;
 }
