--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,6 @@ img {
 	padding-left: 15px;
 	padding-right: 15px;
 	margin: 0 auto;
-	outline: 1px solid red;
 }
 /* Стилизация шапки сайта */
 .header {
@@ -74,8 +73,6 @@ img {
 .header-logo {
 	color: black;
 	margin-right: 93px;
-	padding-top: 32px;
-	padding-bottom: 32px;
 	display: block;
 }
 .web,
@@ -124,7 +121,7 @@ img {
 .current {
 	color: var(--accent-color);
 }
-.header-mail {
+.header-contacts-container {
 	margin-right: 50px;
 }
 .header-mail,
@@ -192,6 +189,9 @@ img {
 .benefits-list {
 	display: flex;
 }
+.benefits-item {
+	width: 270px;
+}
 .benefits-item:not(:last-child) {
 	margin-right: 30px;
 }
@@ -203,7 +203,6 @@ img {
 	letter-spacing: 0.03em;
 	text-transform: uppercase;
 	margin-bottom: 10px;
-	max-width: 270px;
 }
 .benefits-item-text {
 	color: var(--text-color);
@@ -211,7 +210,6 @@ img {
 	font-size: 14px;
 	line-height: 1.71;
 	letter-spacing: 0.03em;
-	max-width: 270px;
 }
 
 /* Стилизация работ */
@@ -232,6 +230,9 @@ img {
 .works-list {
 	display: flex;
 	flex-wrap: wrap;
+}
+.works.item {
+	width: 270px;
 }
 .works-item:not(:last-child) {
 	margin-right: 30px;
@@ -260,12 +261,9 @@ img {
 }
 .team-item-container {
 	background-color: #ffffff;
-	padding-bottom: 30px;
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 	border-radius: 0px 0px 4px 4px;
-}
-.team-item-image {
-	margin-bottom: 30px;
+	padding: 30px 10px;
 }
 
 .team-item-title {
@@ -334,7 +332,7 @@ img {
 
 .nav-portfolio-list {
 	display: flex;
-	margin-bottom: 34px;
+	margin-bottom: 50px;
 	justify-content: center;
 }
 /* Стилизация кнопок */
@@ -371,15 +369,16 @@ img {
 	margin-top: -30px;
 }
 .nav-examples-list > .nav-examples-item {
-	flex-basis: calc(100% / 3 - 30px);
+	flex-basis: calc((100% - 90px) / 3);
 	margin-left: 30px;
 	margin-top: 30px;
 }
-.nav-examples-item-container {
-	border: 1px solid #eeeeee;
-}
+
 .nav-examples-container {
 	padding: 20px 24px;
+	border-right: 1px solid #eeeeee;
+	border-bottom: 1px solid #eeeeee;
+	border-left: 1px solid #eeeeee;
 }
 .nav-examples-item-title {
 	color: var(--title-color);
